--- a/Validace/MainWindow.xaml
+++ b/Validace/MainWindow.xaml
@@ -5,19 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Validace"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Closing="Window_Closing">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <TextBox x:Name="TBValidate" Grid.Row="0" Grid.Column="0"/>
-        <DatePicker x:Name="DPAgeDate" Grid.Column="1" Grid.Row="0" SelectedDateChanged="DPAgeDate_SelectedDateChanged"/>
-        <Label x:Name="LBAgeDate" Content="awdawds" Grid.Column="1" Grid.Row="0" FontSize="32" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button x:Name="BTNValidate" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Content="Ověřit" FontSize="64"/>
+        <Button x:Name="BTNValidate" Content="Ověřit" FontSize="64" Click="BTNValidate_Click" />
     </Grid>
 </Window>
