--- a/Validace/Views/ValidaceView.xaml
+++ b/Validace/Views/ValidaceView.xaml
@@ -18,9 +18,9 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="TBValidateName" Grid.Row="0" Grid.Column="0" Text="Abych viděl" FontSize="30"/>
-        <TextBox x:Name="TBValidateAge" Grid.Row="1" Grid.Column="0" Text="Abych viděl" FontSize="30"/>
-        <TextBox x:Name="TBValidatePIN" Grid.Row="2" Grid.Column="0" Text="Abych viděl" FontSize="30"/>
+        <TextBox x:Name="TBValidateName" Grid.Row="0" Grid.Column="0" Text="Alexandr" FontSize="30"/>
+        <TextBox x:Name="TBValidateAge" Grid.Row="1" Grid.Column="0" Text="32" FontSize="30"/>
+        <TextBox x:Name="TBValidatePIN" Grid.Row="2" Grid.Column="0" Text="020103/0027" FontSize="30"/>
         <DatePicker x:Name="DPAgeDate" Grid.Column="1" Grid.Row="0" SelectedDateChanged="DPAgeDate_SelectedDateChanged"/>
         <Label x:Name="LBAgeDate" Content="awdawds" Grid.Column="1" Grid.Row="2" FontSize="32" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Button x:Name="BTNValidateNow" Grid.Row="3" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="2" Content="Ověřit" FontSize="64" Click="BTNValidateNow_Click"/>
